fixed odd scrollbars

--- a/Discord/Main/src/Importable/Main.css
+++ b/Discord/Main/src/Importable/Main.css
@@ -115,17 +115,17 @@ background: transparent;
 
     #app-mount .scroller-2FKFPG::-webkit-scrollbar-track {
         background: var(--combined-Opacity);
-        border-radius: 7.5px 0 7.5px 0;
+        border-radius: 7.5px 0 0 7.5px;
     }
 
     #app-mount .scroller-2FKFPG::-webkit-scrollbar-track-piece {
         background: var(--combined-Opacity);
-        border-radius: 7.5px 0 7.5px 0;
+        border-radius: 7.5px 0 0 7.5px;
     }
 
     #app-mount .scroller-2FKFPG::-webkit-scrollbar-thumb {
         background: var(--combined-Opacity);
-        border-radius: 7.5px 0 7.5px 0;
+        border-radius: 7.5px 0 0 7.5px;
     }
 
 
